update with surefire plugin data

--- a/test-output/old/Demo Cart App Resgression Test Suite/methods-alphabetical.html
+++ b/test-output/old/Demo Cart App Resgression Test Suite/methods-alphabetical.html
@@ -1,30 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Demo Cart App Resgression Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ae7dc0">  <td>24/09/19 21:07:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountPageTest.Accsetup()[pri:0, instance:com.qa.opencart.tests.AccountPageTest@1de76cc7]">&gt;&gt;Accsetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="ae7dc0">  <td>24/09/19 21:07:45</td>   <td>2014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountPageTest.accPageSectionCounttest()[pri:2, instance:com.qa.opencart.tests.AccountPageTest@1de76cc7]">accPageSectionCounttest</td> 
-  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="ae7dc0">  <td>24/09/19 21:07:45</td>   <td>2076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountPageTest.accPageSectionTest()[pri:3, instance:com.qa.opencart.tests.AccountPageTest@1de76cc7]">accPageSectionTest</td> 
-  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="ae7dc0">  <td>24/09/19 21:07:45</td>   <td>1928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountPageTest.accPagetitletest()[pri:1, instance:com.qa.opencart.tests.AccountPageTest@1de76cc7]">accPagetitletest</td> 
-  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="b0dcab">  <td>24/09/19 21:07:34</td>   <td>-9049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotpwdlinktest()[pri:2, instance:com.qa.opencart.tests.LoginPageTest@581ac8a8]">forgotpwdlinktest</td> 
-  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="b0dcab">  <td>24/09/19 21:07:34</td>   <td>-9131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.qa.opencart.tests.LoginPageTest@581ac8a8]">loginPageTitleTest</td> 
-  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="b0dcab">  <td>24/09/19 21:07:34</td>   <td>-8964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.opencart.tests.LoginPageTest@581ac8a8]">loginTest</td> 
-  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="ae7dc0">  <td>24/09/19 21:07:45</td>   <td>2365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountPageTest.searchTest()[pri:4, instance:com.qa.opencart.tests.AccountPageTest@1de76cc7]">searchTest</td> 
-  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="ae7dc0">  <td>24/09/19 21:07:48</td>   <td>5328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountPageTest.selectProductTest()[pri:5, instance:com.qa.opencart.tests.AccountPageTest@1de76cc7]">selectProductTest</td> 
-  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="a7bace">  <td>24/09/19 21:07:27</td>   <td>-15801</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@581ac8a8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="a7bace">  <td>24/09/19 21:07:36</td>   <td>-6744</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.AccountPageTest@1de76cc7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="a7bace">  <td>24/09/19 21:07:36</td>   <td>-7295</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@581ac8a8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194707680</td>   <td></td> </tr>
-<tr bgcolor="a7bace">  <td>24/09/19 21:07:52</td>   <td>8745</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.AccountPageTest@1de76cc7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194707680</td>   <td></td> </tr>
+<tr bgcolor="ce7389">  <td>24/09/28 15:26:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountPageTest.Accsetup()[pri:0, instance:com.qa.opencart.tests.AccountPageTest@550dbc7a]">&gt;&gt;Accsetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@990734687</td>   <td></td> </tr>
+<tr bgcolor="ce7389">  <td>24/09/28 15:27:00</td>   <td>4258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountPageTest.accPageSectionCounttest()[pri:2, instance:com.qa.opencart.tests.AccountPageTest@550dbc7a]">accPageSectionCounttest</td> 
+  <td>TestNG-tests-2@990734687</td>   <td></td> </tr>
+<tr bgcolor="ce7389">  <td>24/09/28 15:27:00</td>   <td>4401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountPageTest.accPageSectionTest()[pri:3, instance:com.qa.opencart.tests.AccountPageTest@550dbc7a]">accPageSectionTest</td> 
+  <td>TestNG-tests-2@990734687</td>   <td></td> </tr>
+<tr bgcolor="ce7389">  <td>24/09/28 15:27:00</td>   <td>4117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountPageTest.accPagetitletest()[pri:1, instance:com.qa.opencart.tests.AccountPageTest@550dbc7a]">accPagetitletest</td> 
+  <td>TestNG-tests-2@990734687</td>   <td></td> </tr>
+<tr bgcolor="9d9b6b">  <td>24/09/28 15:26:56</td>   <td>207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotpwdlinktest()[pri:2, instance:com.qa.opencart.tests.LoginPageTest@28f2a10f]">forgotpwdlinktest</td> 
+  <td>TestNG-tests-1@58251438</td>   <td></td> </tr>
+<tr bgcolor="9d9b6b">  <td>24/09/28 15:26:56</td>   <td>61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.qa.opencart.tests.LoginPageTest@28f2a10f]">loginPageTitleTest</td> 
+  <td>TestNG-tests-1@58251438</td>   <td></td> </tr>
+<tr bgcolor="9d9b6b">  <td>24/09/28 15:26:56</td>   <td>346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.opencart.tests.LoginPageTest@28f2a10f]">loginTest</td> 
+  <td>TestNG-tests-1@58251438</td>   <td></td> </tr>
+<tr bgcolor="ce7389">  <td>24/09/28 15:27:01</td>   <td>4616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountPageTest.searchTest()[pri:4, instance:com.qa.opencart.tests.AccountPageTest@550dbc7a]">searchTest</td> 
+  <td>TestNG-tests-2@990734687</td>   <td></td> </tr>
+<tr bgcolor="ce7389">  <td>24/09/28 15:27:03</td>   <td>6779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountPageTest.selectProductTest()[pri:5, instance:com.qa.opencart.tests.AccountPageTest@550dbc7a]">selectProductTest</td> 
+  <td>TestNG-tests-2@990734687</td>   <td></td> </tr>
+<tr bgcolor="be9564">  <td>24/09/28 15:26:46</td>   <td>-10315</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@28f2a10f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@58251438</td>   <td></td> </tr>
+<tr bgcolor="be9564">  <td>24/09/28 15:26:46</td>   <td>-10315</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.AccountPageTest@550dbc7a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@990734687</td>   <td></td> </tr>
+<tr bgcolor="be9564">  <td>24/09/28 15:27:00</td>   <td>4055</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@28f2a10f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@58251438</td>   <td></td> </tr>
+<tr bgcolor="be9564">  <td>24/09/28 15:27:06</td>   <td>10254</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.AccountPageTest@550dbc7a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@990734687</td>   <td></td> </tr>
 </table>
