--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,52 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Demo Cart App Resgression Test Suite</th></tr>
-<tr><td><a href="#t0">LoginPage Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,905</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">AccountPage Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">15,825</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">7</th><th class="num">0</th><th class="num">0</th><th class="num attn">1</th><th class="num">24,730</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">LoginPage Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">15,207</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">AccountPage Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">23,824</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">8</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">39,031</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Demo Cart App Resgression Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LoginPage Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.qa.opencart.tests.LoginPageTest</td><td><a href="#m0">forgotpwdlinktest</a></td><td rowspan="1">1726760254334</td><td rowspan="1">83</td></tr><tr class="passedeven"><td><a href="#m1">loginPageTitleTest</a></td><td rowspan="1">1726760254252</td><td rowspan="1">73</td></tr><tr class="passedeven"><td><a href="#m2">loginTest</a></td><td rowspan="1">1726760254419</td><td rowspan="1">1661</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">AccountPage Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.qa.opencart.tests.AccountPageTest</td><td><a href="#m3">accPageSectionCounttest</a></td><td rowspan="1">1726760265397</td><td rowspan="1">52</td></tr><tr><th colspan="4">AccountPage Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.qa.opencart.tests.AccountPageTest</td><td><a href="#m4">accPageSectionTest</a></td><td rowspan="1">1726760265459</td><td rowspan="1">287</td></tr><tr class="passedeven"><td><a href="#m5">accPagetitletest</a></td><td rowspan="1">1726760265311</td><td rowspan="1">82</td></tr><tr class="passedeven"><td><a href="#m6">searchTest</a></td><td rowspan="1">1726760265748</td><td rowspan="1">2960</td></tr><tr class="passedeven"><td><a href="#m7">selectProductTest</a></td><td rowspan="1">1726760268711</td><td rowspan="1">3415</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Demo Cart App Resgression Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LoginPage Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.qa.opencart.tests.LoginPageTest</td><td><a href="#m0">forgotpwdlinktest</a></td><td rowspan="1">1727517416741</td><td rowspan="1">136</td></tr><tr class="passedeven"><td><a href="#m1">loginPageTitleTest</a></td><td rowspan="1">1727517416595</td><td rowspan="1">132</td></tr><tr class="passedeven"><td><a href="#m2">loginTest</a></td><td rowspan="1">1727517416880</td><td rowspan="1">3705</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">AccountPage Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.qa.opencart.tests.AccountPageTest</td><td><a href="#m3">accPageSectionCounttest</a></td><td rowspan="1">1727517420792</td><td rowspan="1">133</td></tr><tr class="passedeven"><td><a href="#m4">accPageSectionTest</a></td><td rowspan="1">1727517420935</td><td rowspan="1">210</td></tr><tr class="passedeven"><td><a href="#m5">accPagetitletest</a></td><td rowspan="1">1727517420651</td><td rowspan="1">135</td></tr><tr class="passedeven"><td><a href="#m6">searchTest</a></td><td rowspan="1">1727517421150</td><td rowspan="1">2160</td></tr><tr class="passedeven"><td><a href="#m7">selectProductTest</a></td><td rowspan="1">1727517423314</td><td rowspan="1">3471</td></tr></tbody>
 </table>
 <h2>LoginPage Test</h2><h3 id="m0">com.qa.opencart.tests.LoginPageTest#forgotpwdlinktest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.qa.opencart.tests.LoginPageTest#loginPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">com.qa.opencart.tests.LoginPageTest#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>AccountPage Test</h2><h3 id="m3">com.qa.opencart.tests.AccountPageTest#accPageSectionCounttest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: accPageSectionCounttest does not match expected [5] but found [4]
-	at org.testng.Assert.fail(Assert.java:99)
-	at org.testng.Assert.failNotEquals(Assert.java:1037)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
-	at org.testng.Assert.assertEquals(Assert.java:122)
-	at org.testng.Assert.assertEquals(Assert.java:907)
-	at com.qa.opencart.tests.AccountPageTest.accPageSectionCounttest(AccountPageTest.java:28)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:566)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
-	at org.testng.TestRunner.privateRun(TestRunner.java:794)
-	at org.testng.TestRunner.run(TestRunner.java:596)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
-	at org.testng.TestNG.runSuites(TestNG.java:1063)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>AccountPage Test</h2><h3 id="m3">com.qa.opencart.tests.AccountPageTest#accPageSectionCounttest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m4">com.qa.opencart.tests.AccountPageTest#accPageSectionTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m5">com.qa.opencart.tests.AccountPageTest#accPagetitletest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m6">com.qa.opencart.tests.AccountPageTest#searchTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
