--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Demo_Cart_App_Resgression_Test_Suite" class="navigator-link">
-              <span class="suite-name border-failed">Demo Cart App Resgression Test Suite</span>
+              <span class="suite-name border-passed">Demo Cart App Resgression Test Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Demo_Cart_App_Resgression_Test_Suite" class="navigator-link ">
-                    <span>E:\Newworkspace\Sept2024POMserires\src\test\resources\testrunners\testng_regression.xml</span>
+                    <span>E:\SeleniumHybrideFramework\src\test\resources\testrunners\testng_regression.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,21 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods, 1 failed,   7 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Demo_Cart_App_Resgression_Test_Suite" class="hide-methods failed suite-Demo_Cart_App_Resgression_Test_Suite"> (hide)</a> <!-- hide-methods failed suite-Demo_Cart_App_Resgression_Test_Suite -->
-                      <a href="#" panel-name="suite-Demo_Cart_App_Resgression_Test_Suite" class="show-methods failed suite-Demo_Cart_App_Resgression_Test_Suite"> (show)</a> <!-- show-methods failed suite-Demo_Cart_App_Resgression_Test_Suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Demo_Cart_App_Resgression_Test_Suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Demo_Cart_App_Resgression_Test_Suite" title="com.qa.opencart.tests.AccountPageTest" class="method navigator-link" hash-for-method="accPageSectionCounttest">accPageSectionCounttest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Demo_Cart_App_Resgression_Test_Suite -->
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -116,6 +102,11 @@
                       <a href="#" panel-name="suite-Demo_Cart_App_Resgression_Test_Suite" class="show-methods passed suite-Demo_Cart_App_Resgression_Test_Suite"> (show)</a> <!-- show-methods passed suite-Demo_Cart_App_Resgression_Test_Suite -->
                     </span>
                     <div class="method-list-content passed suite-Demo_Cart_App_Resgression_Test_Suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Demo_Cart_App_Resgression_Test_Suite" title="com.qa.opencart.tests.AccountPageTest" class="method navigator-link" hash-for-method="accPageSectionCounttest">accPageSectionCounttest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Demo_Cart_App_Resgression_Test_Suite" title="com.qa.opencart.tests.AccountPageTest" class="method navigator-link" hash-for-method="accPageSectionTest">accPageSectionTest</a> <!-- method navigator-link -->
@@ -163,58 +154,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Demo_Cart_App_Resgression_Test_Suite" class="panel Demo_Cart_App_Resgression_Test_Suite">
-          <div class="suite-Demo_Cart_App_Resgression_Test_Suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.qa.opencart.tests.AccountPageTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="accPageSectionCounttest">
-                  </a> <!-- accPageSectionCounttest -->
-                  <span class="method-name">accPageSectionCounttest</span>
-                  <div class="stack-trace">java.lang.AssertionError: accPageSectionCounttest does not match expected [5] but found [4]
-	at org.testng.Assert.fail(Assert.java:99)
-	at org.testng.Assert.failNotEquals(Assert.java:1037)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
-	at org.testng.Assert.assertEquals(Assert.java:122)
-	at org.testng.Assert.assertEquals(Assert.java:907)
-	at com.qa.opencart.tests.AccountPageTest.accPageSectionCounttest(AccountPageTest.java:28)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:566)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
-	at org.testng.TestRunner.privateRun(TestRunner.java:794)
-	at org.testng.TestRunner.run(TestRunner.java:596)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
-	at org.testng.TestNG.runSuites(TestNG.java:1063)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Demo_Cart_App_Resgression_Test_Suite-class-failed -->
           <div class="suite-Demo_Cart_App_Resgression_Test_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -252,6 +191,13 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="accPageSectionCounttest">
+                  </a> <!-- accPageSectionCounttest -->
+                  <span class="method-name">accPageSectionCounttest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="accPageSectionTest">
                   </a> <!-- accPageSectionTest -->
                   <span class="method-name">accPageSectionTest</span>
@@ -283,19 +229,19 @@
         </div> <!-- panel Demo_Cart_App_Resgression_Test_Suite -->
         <div panel-name="test-xml-Demo_Cart_App_Resgression_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\Newworkspace\Sept2024POMserires\src\test\resources\testrunners\testng_regression.xml</span>
+            <span class="header-content">E:\SeleniumHybrideFramework\src\test\resources\testrunners\testng_regression.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Demo Cart App Resgression Test Suite&quot; guice-stage=&quot;DEVELOPMENT&quot; verbose=&quot;3&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;LoginPage Test&quot; verbose=&quot;3&quot;&gt;
+&lt;suite thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;Demo Cart App Resgression Test Suite&quot; guice-stage=&quot;DEVELOPMENT&quot; verbose=&quot;3&quot;&gt;
+  &lt;test thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;LoginPage Test&quot; verbose=&quot;3&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.qa.opencart.tests.LoginPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- LoginPage Test --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;AccountPage Test&quot; verbose=&quot;3&quot;&gt;
+  &lt;test thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;AccountPage Test&quot; verbose=&quot;3&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.qa.opencart.tests.AccountPageTest&quot;/&gt;
     &lt;/classes&gt;
@@ -342,42 +288,42 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'selectProductTest')
-data.setCell(0, 2, 'com.qa.opencart.tests.AccountPageTest')
-data.setCell(0, 3, 3415);
+data.setCell(0, 1, 'loginTest')
+data.setCell(0, 2, 'com.qa.opencart.tests.LoginPageTest')
+data.setCell(0, 3, 3705);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'searchTest')
+data.setCell(1, 1, 'selectProductTest')
 data.setCell(1, 2, 'com.qa.opencart.tests.AccountPageTest')
-data.setCell(1, 3, 2960);
+data.setCell(1, 3, 3471);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginTest')
-data.setCell(2, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(2, 3, 1661);
+data.setCell(2, 1, 'searchTest')
+data.setCell(2, 2, 'com.qa.opencart.tests.AccountPageTest')
+data.setCell(2, 3, 2160);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'accPageSectionTest')
 data.setCell(3, 2, 'com.qa.opencart.tests.AccountPageTest')
-data.setCell(3, 3, 287);
+data.setCell(3, 3, 210);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'forgotpwdlinktest')
 data.setCell(4, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(4, 3, 83);
+data.setCell(4, 3, 136);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'accPagetitletest')
 data.setCell(5, 2, 'com.qa.opencart.tests.AccountPageTest')
-data.setCell(5, 3, 82);
+data.setCell(5, 3, 135);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'loginPageTitleTest')
-data.setCell(6, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(6, 3, 73);
+data.setCell(6, 1, 'accPageSectionCounttest')
+data.setCell(6, 2, 'com.qa.opencart.tests.AccountPageTest')
+data.setCell(6, 3, 133);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'accPageSectionCounttest')
-data.setCell(7, 2, 'com.qa.opencart.tests.AccountPageTest')
-data.setCell(7, 3, 52);
+data.setCell(7, 1, 'loginPageTitleTest')
+data.setCell(7, 2, 'com.qa.opencart.tests.LoginPageTest')
+data.setCell(7, 3, 132);
 window.suiteTableData['Demo_Cart_App_Resgression_Test_Suite']= { tableData: data, tableDiv: 'times-div-Demo_Cart_App_Resgression_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Demo_Cart_App_Resgression_Test_Suite">
               </div> <!-- times-div-Demo_Cart_App_Resgression_Test_Suite -->
             </div> <!-- times-div -->
@@ -408,58 +354,62 @@ return data;
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
-              <div class="test-method">
-                <span class="method-name">loginPageTitleTest</span>
-                <span class="method-start">6681 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">forgotpwdlinktest</span>
-                <span class="method-start">6763 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">loginTest</span>
-                <span class="method-start">6848 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-test after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">8516 ms</span>
-              </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.AccountPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">9066 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">Accsetup</span>
-                <span class="method-start">15811 ms</span>
+                <span class="method-start">10322 ms</span>
               </div> <!-- configuration-class before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">accPagetitletest</span>
-                <span class="method-start">17740 ms</span>
+                <span class="method-name">loginPageTitleTest</span>
+                <span class="method-start">10384 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">accPageSectionCounttest</span>
-                <span class="method-start">17826 ms</span>
+                <span class="method-name">forgotpwdlinktest</span>
+                <span class="method-start">10530 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">accPageSectionTest</span>
-                <span class="method-start">17888 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">searchTest</span>
-                <span class="method-start">18177 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">selectProductTest</span>
-                <span class="method-start">21140 ms</span>
+                <span class="method-name">loginTest</span>
+                <span class="method-start">10669 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">24556 ms</span>
+                <span class="method-start">14378 ms</span>
+              </div> <!-- configuration-test after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.AccountPageTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">accPagetitletest</span>
+                <span class="method-start">14440 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">accPageSectionCounttest</span>
+                <span class="method-start">14581 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">accPageSectionTest</span>
+                <span class="method-start">14724 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">searchTest</span>
+                <span class="method-start">14939 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">selectProductTest</span>
+                <span class="method-start">17103 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">20576 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
