--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afe297">  <td>24/09/18 00:56:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductInfoPageTest.Accsetup()[pri:0, instance:com.qa.opencart.tests.ProductInfoPageTest@3d6f0054]">&gt;&gt;Accsetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1276709283</td>   <td></td> </tr>
-<tr bgcolor="afe297">  <td>24/09/18 00:56:43</td>   <td>1566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductInfoPageTest.productInfoDataTest()[pri:0, instance:com.qa.opencart.tests.ProductInfoPageTest@3d6f0054]">productInfoDataTest</td> 
-  <td>main@1276709283</td>   <td></td> </tr>
-<tr bgcolor="88d8b8">  <td>24/09/18 00:56:34</td>   <td>-6719</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.ProductInfoPageTest@3d6f0054]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1276709283</td>   <td></td> </tr>
-<tr bgcolor="88d8b8">  <td>24/09/18 00:56:45</td>   <td>3929</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.ProductInfoPageTest@3d6f0054]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1276709283</td>   <td></td> </tr>
+<tr bgcolor="90806a">  <td>24/09/24 23:24:04</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.RegistrationPageTest@611889f4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1565740893</td>   <td></td> </tr>
+<tr bgcolor="9cd4d8">  <td>24/09/24 23:24:10</td>   <td>6263</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationPageTest.setupRegister()[pri:0, instance:com.qa.opencart.tests.RegistrationPageTest@611889f4]">&gt;&gt;setupRegister</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1565740893</td>   <td></td> </tr>
+<tr bgcolor="90806a">  <td>24/09/24 23:24:53</td>   <td>48997</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.RegistrationPageTest@611889f4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1565740893</td>   <td></td> </tr>
+<tr bgcolor="9cd4d8">  <td>24/09/24 23:24:44</td>   <td>40942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationPageTest.userRegistrationTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.opencart.tests.RegistrationPageTest@611889f4]">userRegistrationTest</td> 
+  <td>main@1565740893</td>   <td></td> </tr>
+<tr bgcolor="9cd4d8">  <td>24/09/24 23:24:44</td>   <td>40942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationPageTest.userRegistrationTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.opencart.tests.RegistrationPageTest@611889f4]">userRegistrationTest</td> 
+  <td>main@1565740893</td>   <td></td> </tr>
+<tr bgcolor="9cd4d8">  <td>24/09/24 23:24:44</td>   <td>40942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationPageTest.userRegistrationTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.opencart.tests.RegistrationPageTest@611889f4]">userRegistrationTest</td> 
+  <td>main@1565740893</td>   <td></td> </tr>
+<tr bgcolor="9cd4d8">  <td>24/09/24 23:24:44</td>   <td>40942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationPageTest.userRegistrationTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.opencart.tests.RegistrationPageTest@611889f4]">userRegistrationTest</td> 
+  <td>main@1565740893</td>   <td></td> </tr>
+<tr bgcolor="9cd4d8">  <td>24/09/24 23:24:44</td>   <td>40942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationPageTest.userRegistrationTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.opencart.tests.RegistrationPageTest@611889f4]">userRegistrationTest</td> 
+  <td>main@1565740893</td>   <td></td> </tr>
 </table>
